<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_login_image_palms">


   <androidx.core.widget.NestedScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">


           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="130dp"
               android:layout_marginStart="36.7dp"
               android:orientation="horizontal">

               <lunainc.com.mx.fastdelivery.customfonts.MyTextView_Roboto_Bold
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/fast_delivery_login"
                   android:textSize="31sp"
                   android:textColor="@color/white"/>
               <View
                   android:layout_width="1dp"
                   android:layout_marginTop="5dp"
                   android:layout_height="34dp"
                   android:layout_marginStart="9.2dp"
                   android:background="@color/blue_black_dark"/>

               <lunainc.com.mx.fastdelivery.customfonts.MyTextView_Roboto_Regular
                   android:layout_gravity="center"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/app"
                   android:layout_marginStart="8.5dp"
                   android:textSize="20sp"
                   android:textColor="@color/colorPrimary"/>

           </LinearLayout>







           <lunainc.com.mx.fastdelivery.customfonts.EditText_Roboto_Regular
               android:id="@+id/emailInput"
               android:layout_marginTop="110dp"
               android:layout_width="match_parent"
               android:layout_height="55dp"
               android:layout_marginStart="34.6dp"
               android:layout_marginEnd="33.6dp"
               android:background="@drawable/login_input"
               android:padding="12dp"
               android:drawablePadding="6dp"
               android:drawableStart="@drawable/ic_mail_outline"
               android:hint="@string/email"
               android:inputType="textEmailAddress"
               android:textAlignment="textStart"
               android:textColor="@color/black"
               android:textColorHint="@color/colorTextLogin"
               android:textSize="18.4sp" />



           <com.google.android.material.textfield.TextInputLayout
               app:passwordToggleEnabled="true"
               android:layout_marginTop="20dp"
               android:layout_width="match_parent"
               app:hintEnabled="false"
               app:boxBackgroundColor="@null"
               app:boxBackgroundMode="none"
               android:layout_height="wrap_content">
           <lunainc.com.mx.fastdelivery.customfonts.EditText_Roboto_Regular
               android:id="@+id/passwordInput"
               android:layout_width="match_parent"
               android:layout_height="55dp"
               android:layout_marginStart="34.6dp"
               android:layout_marginEnd="33.6dp"
               android:background="@drawable/login_input"
               android:hint="@string/password"
               app:passwordToggleEnabled="true"


               android:padding="12dp"
               android:drawableStart="@drawable/ic_lock"
               android:drawablePadding="6dp"
               android:inputType="textPassword"
               android:textAlignment="textStart"
               android:textColor="@color/black"
               android:textColorHint="@color/colorTextLogin"
               android:textSize="18.4sp" />
           </com.google.android.material.textfield.TextInputLayout>


           <View
               android:layout_width="match_parent"
               android:layout_height="3dp"
               android:layout_marginStart="34.6dp"
               android:layout_marginTop="6.5dp"
               android:layout_marginEnd="33.6dp"
               android:background="#33ffffff" />


           <TextView
               android:id="@+id/resetPassword"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/white"
               android:text="@string/password_reset"
               android:textSize="19sp"
               android:gravity="end"
               android:layout_gravity="end"
               android:layout_marginEnd="34.6dp"/>



           <Button
               android:id="@+id/btnLogin"
               android:layout_width="match_parent"
               android:layout_height="60dp"
               android:layout_marginStart="34.6dp"
               android:layout_marginTop="23.8dp"
               android:layout_marginEnd="33.6dp"
               style="@style/ButtonLoginNew"
               android:gravity="center_horizontal"
               android:padding="10dp"
               android:text="@string/enter"
               android:textColor="@color/colorPrimaryDark"
               android:textSize="18sp" />


           <Button
               android:id="@+id/createNewAccount"
               android:layout_width="match_parent"
               android:layout_height="60dp"
               android:layout_marginStart="34.6dp"
               android:layout_marginTop="23.8dp"
               android:layout_marginEnd="33.6dp"
               style="@style/ButtonCreateAccount"
               android:gravity="center_horizontal"
               android:padding="10dp"
               android:text="@string/create_new_account"
               android:textColor="#ffffff"
               android:textSize="18sp" />





       </LinearLayout>



   </androidx.core.widget.NestedScrollView>


</RelativeLayout>