<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
           android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/itemIconAction"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_settings"
                    android:contentDescription="@string/image_icon" />

                <TextView
                    android:layout_gravity="center_vertical"
                    android:id="@+id/itemTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/total_item"
                    android:textColor="@color/colorLightGray"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </LinearLayout>


            <ImageView
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/ic_right_black"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/image_arrow" />



        </RelativeLayout>




    </androidx.cardview.widget.CardView>




</LinearLayout>