<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="270dp">


                <include
                    android:id="@+id/toolbar"
                    layout="@layout/toolbar"/>




                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:id="@+id/imageProduct"
                    android:src="@drawable/fast_logo"
                    android:contentDescription="@string/icon" />






            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingStart="13.4dp"
                tools:ignore="RtlSymmetry">

                <lunainc.com.mx.fastdelivery.customfonts.MyTextView_Roboto_Regular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_client"
                    android:id="@+id/nameClient"
                    android:textColor="#262628"
                    android:textSize="20sp" />

                <lunainc.com.mx.fastdelivery.customfonts.MyTextView_Roboto_Regular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:id="@+id/directionClient"
                    android:text="@string/direction_client"
                    android:textColor="#9b9b9b"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">



                    <lunainc.com.mx.fastdelivery.customfonts.MyTextView_Roboto_Regular
                        android:id="@+id/priceTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/precio_total"
                        android:textColor="#9b9b9b"
                        android:textSize="12sp" />

                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#f5f5f5"
                android:padding="6dp" />




            <lunainc.com.mx.fastdelivery.customfonts.MyTextView_Roboto_Regular
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_order"
                android:layout_marginStart="15dp"
                android:textSize="16.7sp"
                android:textColor="#c1c5c6"/>
            <lunainc.com.mx.fastdelivery.customfonts.MyTextView_Roboto_Regular
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/descriptionProduct"
                android:text="@string/lorem"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="70dp"
                android:textSize="16.7sp"
                android:textColor="#000000"/>

























            <!--Descriptions-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#f5f5f5"
                android:padding="6dp" />
















        </LinearLayout>

    </androidx.core.widget.NestedScrollView>





</RelativeLayout>




