<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
    tools:showIn="@layout/activity_get_current_location">
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.skyfishjy.library.RippleBackground
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ripple_bg"
        app:rb_color="#0099CC"
        app:rb_radius="32dp"
        app:rb_rippleAmount="4"
        app:rb_duration="3000"
        app:rb_scale="6">

        <androidx.cardview.widget.CardView
            android:transformPivotY="18dp"
            android:layout_margin="30dp"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/location_order"
                    android:textColor="@color/blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/direction"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/direction_item"
                    android:textColor="@color/blue_black_dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:translationY="-15dp"
            android:src="@drawable/ic_marker_location"/>
    </com.skyfishjy.library.RippleBackground>




    <Button
        android:id="@+id/btn_find"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:text="@string/validate_direction"
        android:textColor="#FFFFFF"
        android:background="@color/colorPrimary"
        android:layout_margin="16dp"
        android:textStyle="bold"/>

</RelativeLayout>